@@ -1,11 +1,9 @@
 {
-  "timestamp" : "2022-05-07T01:49:05Z",
-  "count" : 312,
-  "count_minmax" : [ 0, 312 ],
-  "count_prev_day_inc" : 321,
-  "count_prev_day_dec" : 160,
-  "uniques" : 10,
-  "uniques_minmax" : [ 0, 10 ],
-  "uniques_prev_day_inc" : 13,
-  "uniques_prev_day_dec" : 0
+  "timestamp" : "2022-05-20T02:00:00Z",
+  "count" : 256,
+  "count_minmax" : [ 256, 312 ],
+  "count_decinc" : [ -56, +0 ],
+  "uniques" : 8,
+  "uniques_minmax" : [ 8, 10 ],
+  "uniques_decinc" : [ -2, +0 ]
 }
