@@ -1,3 +1,10 @@
+2022-05-20T02:00:00Z:
+* notice: last 14d: unq all: 26 5115
+* notice: prev accum: outdated-unq outdated-all / unq all: 467 18940 / 575 24074
+* notice: next accum: outdated-unq outdated-all / unq all: 481 19265 / 576 24380
+* notice: prev exec diff / last date diff / accum: unq all: +0 +106 -2 -56 / +3 +353 -0 -0 / 3 353
+* notice: changed dates: [2022-05-06 2022-05-19]
+
 2022-05-19T16:57:23Z:
 * notice: last 14d: unq all: 26 5134
 * notice: prev accum: outdated-unq outdated-all / unq all: 467 18940 / 578 24071
